0.1.x
=====
- Add support for XDG_MENU_PREFIX; use applications.menu as a fallback
  (bug #5980).
- Explicitly link against gobject, add other missing libs (bug #6405).


0.1.3
=====
- Merge consecutive file change events using an idle handler.
- Fix empty charset in Polish translation file (bug #6783).
- Translation updates (pt, ja, id).


0.1.2
=====
- Fix license headers (bug #6226).
- Implement file system monitoring, adding the signals
  GarconMenu::reload-required, GarconMenu::directory-changed and 
  GarconMenuItem::changed for applications to react on file system
  changes.
- Improve the code quality of garcon_config_lookup().
- Lookup relative filenames with garcon_config_build_paths().
- Rework menu loading a bit.
- Reload the Categories/OnlyShowIn/NotShowIn fields when reloading
  a GarconMenuItem.
- Add new methods (this list may be incomplete):
  - garcon_menu_element_equal()
  - garcon_menu_item_pool_clear()
  - garcon_menu_item_pool_lookup_file().
- Add Xfce menu data files from xfdesktop (bug #6272).
- Remove deprecated encoding key from desktop files.
- Fix a memory leak in merge file nodes with a filename.
- Translation updates (bm, ca, da, de, el, es, eu, fi, fr, gl, hu, hr,
  id, it, kk, nl, pj, pl, pt, pt_BR, ru, sv, tr, ug, uk, zh_TW).


0.1.1
=====
- Don't check for GTK+ in configure.in.in. We don't depend on it.
- Make tests noinst_PROGRAMS as they are not suited for automatic testing.
- Fix some compiler warnings in the tests.
- Drop pot file and switch to xdt 4.7.2.
- Rename icon to icon_name in GarconMenuDirectory.
- Use g_value_dub_object where possible.
- Plug various memory leaks.
- Silent build.
- Build ChangeLog in make dist.
- API documentation improvements.
- Translation updates (fr, ja, gl, zh_CN, cs, sv, pt_PT, pt, el, hu).


0.1.0
=====
- This is a complete rewrite of the former Xfce menu library called 
  libxfce4menu. It covers almost every part of the menu specification